Fix dark mode and spacing between footer

--- a/templates/static/css/channel.css
+++ b/templates/static/css/channel.css
@@ -131,4 +131,7 @@ footer {
   a {
     color: #2196F3
   }
+  .videoLink {
+    color: white;
+  }
 }
